--- a/package.json
+++ b/package.json
@@ -8,14 +8,12 @@
   "scripts": {
     "start": "webpack --watch",
     "prebuild": "webpack --config webpack.config.js --mode production",
-    "build": "node pack-extension.js"
+    "build": "node pack-extension.js bricklink-price-checker.zip"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-proposal-decorators": "^7.12.12",
     "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
     "archiver": "^5.2.0",
     "babel-loader": "^8.2.2",
     "webpack": "^5.15.0",
@@ -25,7 +23,6 @@
   "dependencies": {
     "dequal": "^2.0.2",
     "node-html-parser": "^3.0.3",
-    "preact": "^10.5.10",
     "webextension-polyfill": "^0.7.0"
   }
 }
